// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`E2E: CommentThread.tsx > generates skeleton with chakra adapter 1`] = `
"import {
  Skeleton,
  SkeletonCircle,
  SkeletonText,
  Box,
  Flex,
} from '@chakra-ui/react'

export function CommentThreadSkeleton() {
  return (
    <Box spacing="16px">
      <Flex gap="12px">
        <SkeletonCircle size="32px" />
        <Box spacing="4px">
          <SkeletonText noOfLines={1} />
          <SkeletonText noOfLines={1} />
        </Box>
      </Flex>
      <Flex gap="12px">
        <SkeletonCircle size="32px" />
        <Box spacing="4px">
          <SkeletonText noOfLines={1} />
          <SkeletonText noOfLines={1} />
        </Box>
      </Flex>
      <Flex gap="12px">
        <SkeletonCircle size="32px" />
        <Box spacing="4px">
          <SkeletonText noOfLines={1} />
          <SkeletonText noOfLines={1} />
        </Box>
      </Flex>
    </Box>
  )
}
"
`;

exports[`E2E: CommentThread.tsx > generates skeleton with mui adapter 1`] = `
"import { Skeleton } from '@mui/material'
import { Box } from '@mui/material'

export function CommentThreadSkeleton() {
  return (
    <Box sx={{ '& > * + *': { marginTop: '16px' } }}>
      <Box sx={{ display: 'flex', gap: '12px' }}>
        <Skeleton variant="circular" width="32px" height="32px" />
        <Box sx={{ '& > * + *': { marginTop: '4px' } }}>
          <Skeleton variant="text" width="120px" />
          <Skeleton variant="text" width="150px" />
        </Box>
      </Box>
      <Box sx={{ display: 'flex', gap: '12px' }}>
        <Skeleton variant="circular" width="32px" height="32px" />
        <Box sx={{ '& > * + *': { marginTop: '4px' } }}>
          <Skeleton variant="text" width="120px" />
          <Skeleton variant="text" width="150px" />
        </Box>
      </Box>
      <Box sx={{ display: 'flex', gap: '12px' }}>
        <Skeleton variant="circular" width="32px" height="32px" />
        <Box sx={{ '& > * + *': { marginTop: '4px' } }}>
          <Skeleton variant="text" width="120px" />
          <Skeleton variant="text" width="150px" />
        </Box>
      </Box>
    </Box>
  )
}
"
`;

exports[`E2E: CommentThread.tsx > generates skeleton with shadcn adapter 1`] = `
"import { Skeleton } from '@/components/ui/skeleton'

export function CommentThreadSkeleton() {
  return (
    <div className="space-y-4">
      <div className="flex gap-3">
        <Skeleton className="h-8 w-8 rounded-full" />
        <div className="space-y-1">
          <Skeleton className="w-[120px] h-3 rounded" />
          <Skeleton className="w-[150px] h-4 rounded" />
        </div>
      </div>
      <div className="flex gap-3">
        <Skeleton className="h-8 w-8 rounded-full" />
        <div className="space-y-1">
          <Skeleton className="w-[120px] h-3 rounded" />
          <Skeleton className="w-[150px] h-4 rounded" />
        </div>
      </div>
      <div className="flex gap-3">
        <Skeleton className="h-8 w-8 rounded-full" />
        <div className="space-y-1">
          <Skeleton className="w-[120px] h-3 rounded" />
          <Skeleton className="w-[150px] h-4 rounded" />
        </div>
      </div>
    </div>
  )
}
"
`;

exports[`E2E: CommentThread.tsx > generates skeleton with tailwind adapter 1`] = `
"export function CommentThreadSkeleton() {
  return (
    <div className="space-y-4 animate-pulse animate-pulse">
      <div className="flex gap-3">
        <div className="h-8 w-8 rounded-full bg-gray-200" />
        <div className="space-y-1">
          <div className="w-[120px] h-3 rounded bg-gray-200" />
          <div className="w-[150px] h-4 rounded bg-gray-200" />
        </div>
      </div>
      <div className="flex gap-3">
        <div className="h-8 w-8 rounded-full bg-gray-200" />
        <div className="space-y-1">
          <div className="w-[120px] h-3 rounded bg-gray-200" />
          <div className="w-[150px] h-4 rounded bg-gray-200" />
        </div>
      </div>
      <div className="flex gap-3">
        <div className="h-8 w-8 rounded-full bg-gray-200" />
        <div className="space-y-1">
          <div className="w-[120px] h-3 rounded bg-gray-200" />
          <div className="w-[150px] h-4 rounded bg-gray-200" />
        </div>
      </div>
    </div>
  )
}
"
`;

exports[`E2E: ProductTile.tsx > generates skeleton with chakra adapter 1`] = `
"import {
  Skeleton,
  SkeletonCircle,
  SkeletonText,
  Box,
  Flex,
} from '@chakra-ui/react'

export function ProductTileSkeleton() {
  return (
    <Flex direction="column">
      <Skeleton height="192px" width="100%" />
      <Box spacing="8px">
        <SkeletonText noOfLines={1} />
        <SkeletonText noOfLines={1} />
        <SkeletonText noOfLines={1} />
        <Skeleton height="40px" width="100%" />
      </Box>
    </Flex>
  )
}
"
`;

exports[`E2E: ProductTile.tsx > generates skeleton with mui adapter 1`] = `
"import { Skeleton } from '@mui/material'
import { Box } from '@mui/material'

export function ProductTileSkeleton() {
  return (
    <Box sx={{ display: 'flex', flexDirection: 'column' }}>
      <Skeleton variant="rectangular" width="100%" height="192px" />
      <Box sx={{ '& > * + *': { marginTop: '8px' } }}>
        <Skeleton variant="text" width="200px" />
        <Skeleton variant="text" width="150px" />
        <Skeleton variant="text" width="120px" />
        <Skeleton variant="rectangular" width="100%" height="40px" />
      </Box>
    </Box>
  )
}
"
`;

exports[`E2E: ProductTile.tsx > generates skeleton with shadcn adapter 1`] = `
"import { Skeleton } from '@/components/ui/skeleton'

export function ProductTileSkeleton() {
  return (
    <div className="flex flex-col overflow-hidden rounded-lg">
      <Skeleton className="h-48 w-full" />
      <div className="p-4 space-y-2">
        <Skeleton className="w-[200px] h-6 rounded" />
        <Skeleton className="w-[150px] h-4 rounded" />
        <Skeleton className="w-[120px] h-3 rounded" />
        <Skeleton className="w-full h-10 rounded-md" />
      </div>
    </div>
  )
}
"
`;

exports[`E2E: ProductTile.tsx > generates skeleton with tailwind adapter 1`] = `
"export function ProductTileSkeleton() {
  return (
    <div className="flex flex-col overflow-hidden animate-pulse rounded-lg animate-pulse">
      <div className="h-48 w-full bg-gray-200" />
      <div className="p-4 space-y-2">
        <div className="w-[200px] h-6 rounded bg-gray-200" />
        <div className="w-[150px] h-4 rounded bg-gray-200" />
        <div className="w-[120px] h-3 rounded bg-gray-200" />
        <div className="w-full h-10 rounded-md bg-gray-200" />
      </div>
    </div>
  )
}
"
`;

exports[`E2E: ProfileHeader.tsx > generates skeleton with chakra adapter 1`] = `
"import {
  Skeleton,
  SkeletonCircle,
  SkeletonText,
  Box,
  Flex,
} from '@chakra-ui/react'

export function ProfileHeaderSkeleton() {
  return (
    <Flex gap="16px">
      <SkeletonCircle size="64px" />
      <Flex direction="column" gap="4px">
        <SkeletonText noOfLines={1} />
        <SkeletonText noOfLines={1} />
        <Skeleton height="20px" width="64px" />
      </Flex>
    </Flex>
  )
}
"
`;

exports[`E2E: ProfileHeader.tsx > generates skeleton with mui adapter 1`] = `
"import { Skeleton } from '@mui/material'
import { Box } from '@mui/material'

export function ProfileHeaderSkeleton() {
  return (
    <Box sx={{ display: 'flex', gap: '16px' }}>
      <Skeleton variant="circular" width="64px" height="64px" />
      <Box sx={{ display: 'flex', flexDirection: 'column', gap: '4px' }}>
        <Skeleton variant="text" width="240px" />
        <Skeleton variant="text" width="150px" />
        <Skeleton variant="rectangular" width="64px" height="20px" />
      </Box>
    </Box>
  )
}
"
`;

exports[`E2E: ProfileHeader.tsx > generates skeleton with shadcn adapter 1`] = `
"import { Skeleton } from '@/components/ui/skeleton'

export function ProfileHeaderSkeleton() {
  return (
    <div className="flex items-center gap-4 p-6">
      <Skeleton className="h-16 w-16 rounded-full" />
      <div className="flex flex-col gap-1">
        <Skeleton className="w-[240px] h-7 rounded" />
        <Skeleton className="w-[150px] h-4 rounded" />
        <Skeleton className="h-5 w-16 rounded-full" />
      </div>
    </div>
  )
}
"
`;

exports[`E2E: ProfileHeader.tsx > generates skeleton with tailwind adapter 1`] = `
"export function ProfileHeaderSkeleton() {
  return (
    <div className="flex items-center gap-4 p-6 animate-pulse animate-pulse">
      <div className="h-16 w-16 rounded-full bg-gray-200" />
      <div className="flex flex-col gap-1">
        <div className="w-[240px] h-7 rounded bg-gray-200" />
        <div className="w-[150px] h-4 rounded bg-gray-200" />
        <div className="h-5 w-16 rounded-full bg-gray-200" />
      </div>
    </div>
  )
}
"
`;

exports[`E2E: UserCard.tsx > generates skeleton with chakra adapter 1`] = `
"import {
  Skeleton,
  SkeletonCircle,
  SkeletonText,
  Box,
  Flex,
} from '@chakra-ui/react'

export function UserCardSkeleton() {
  return (
    <Flex gap="12px">
      <SkeletonCircle size="48px" />
      <Box spacing="4px">
        <SkeletonText noOfLines={1} />
        <SkeletonText noOfLines={1} />
      </Box>
    </Flex>
  )
}
"
`;

exports[`E2E: UserCard.tsx > generates skeleton with mui adapter 1`] = `
"import { Skeleton } from '@mui/material'
import { Box } from '@mui/material'

export function UserCardSkeleton() {
  return (
    <Box sx={{ display: 'flex', gap: '12px' }}>
      <Skeleton variant="circular" width="48px" height="48px" />
      <Box sx={{ '& > * + *': { marginTop: '4px' } }}>
        <Skeleton variant="text" width="200px" />
        <Skeleton variant="text" width="150px" />
      </Box>
    </Box>
  )
}
"
`;

exports[`E2E: UserCard.tsx > generates skeleton with shadcn adapter 1`] = `
"import { Skeleton } from '@/components/ui/skeleton'

export function UserCardSkeleton() {
  return (
    <div className="flex gap-3 p-4">
      <Skeleton className="h-12 w-12 rounded-full" />
      <div className="space-y-1">
        <Skeleton className="w-[200px] h-6 rounded" />
        <Skeleton className="w-[150px] h-4 rounded" />
      </div>
    </div>
  )
}
"
`;

exports[`E2E: UserCard.tsx > generates skeleton with tailwind adapter 1`] = `
"export function UserCardSkeleton() {
  return (
    <div className="flex gap-3 p-4 animate-pulse animate-pulse">
      <div className="h-12 w-12 rounded-full bg-gray-200" />
      <div className="space-y-1">
        <div className="w-[200px] h-6 rounded bg-gray-200" />
        <div className="w-[150px] h-4 rounded bg-gray-200" />
      </div>
    </div>
  )
}
"
`;
